# classparse

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_classparse.py  update_readme.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yaml
classparse/: __init__.py  analyze.py  docs.py  proto.py  transform.py  types.py
examples/: __init__.py  load_defaults.py  no_source.py  one_arg.py  simple.py  test_one_arg.py  usage.py
